Links should wrap correctly on mobile views, addresses #922.

--- a/app/assets/stylesheets/objects/broadcasts.scss
+++ b/app/assets/stylesheets/objects/broadcasts.scss
@@ -3,6 +3,10 @@
 
   margin-bottom: 80px;
 
+  a {
+    word-wrap: break-word;
+  }
+
   img {
     border: 1px solid $gray-lighter;
     display: block;
